favicon code added

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Milstone-06: Projects with API</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@2.50.2/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <style>
         .post{
            padding: 15px;
