update code added

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </header>
     <main>
         <section>
-          <h1 class="text-5xl text-center text-rose-500 py-12">Json placeholder Post</h1>
+          <h1 class="text-7xl text-center text-rose-500 py-12">Json placeholder Post</h1>
         </section><br>
     
     <section>
@@ -63,7 +63,7 @@
     </section>
     <section class="px-12">
         <div>
-            <h1 class="text-center font-bold text-3xl py-12">Welcome to MEME World</h1><br>
+            <h1 class="text-center font-bold text-7xl text-yellow-400 bg-black my-20">Welcome to MEME World</h1><br>
         </div>
         <div id="section"
           class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 lg:px-12">
@@ -71,7 +71,7 @@
         </div>
     </section><br>
     <section class="px-12">
-      <h1 class="text-center font-bold text-4xl my-12">Welcome to Rest World</h1>
+      <h1 class="text-center font-bold text-7xl text-yellow-400 bg-black my-12">Welcome to Rest World</h1>
       <div id="countries-info" class="grid grid-cols-1 md:grid-clos-2 lg:grid-cols-3 gap-6">
 
       </div>
